Updated public file

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,18 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Recipes</title>
+    <title>My Pantry: Smart Grocery Tracking</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
-    <link rel="stylesheet" type="text/css" href= "../assets/style.css">
+    <link rel="stylesheet" type="text/css" href= "..public/assets/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
-   
+  {{logo}}
   <body> 
-    <section class="section">
-        <div class="container">
-          <img src="../assets/mediumsmall.png" style = "width: 250px" class = "png">
-        </div>
-      </section>
-     
+    {{{ body }}}
   </body>
 </html>
