--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,3 +1,6 @@
-body {
-    background-color: rgb(255, 214, 190);
+.png 
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
