--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,3 +18,18 @@ background-color: #f9a590;
 {
 background-color: #8ae6fe;
 } 
+
+.text
+{
+    width: 30%;
+}
+
+.number
+{
+    width: 30%;
+}
+
+.fa-3x
+{
+    color: rgb(206, 100, 100);
+}
