--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,3 +23,25 @@ background-color: #8ae6fe;
 {
     color: rgb(206, 100, 100);
 }
+
+.amount, .text
+{
+height: 50px;
+}
+
+.text
+{
+  width: 150px;
+}
+
+.amount
+{width: 50px;
+    margin-right: 12px;
+}
+
+.text
+{
+  margin-left: 10px; 
+  margin-right: 10px;
+}
+
