Connected routes with respective files

--- a/views/partials/logo.handlebars
+++ b/views/partials/logo.handlebars
@@ -2,6 +2,6 @@
 
 <section class="section">
     <div class="container">
-      <img src="../../public/assets/mediumsmall.png" style = "width: 250px" class = "png">
+      <img src="/assets/mediumsmall.png" style = "width: 250px" class = "png">
     </div>
   </section>
