--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Pantry: Smart Grocery Tracking</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
-    <link rel="stylesheet" type="text/css" href= "..public/assets/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  </head>
-  <body> 
-    {{{ body }}}
-  </body>
-
+    <script src="https://code.jquery.com/jquery.js"></script>
+	<script src="/js/pantry.js"></script>
+    <title>My Pantry</title>
+</head>
+<body>
+    {{{body}}}
+</body>
 </html>
