--- a/views/partials/addItem.handlebars
+++ b/views/partials/addItem.handlebars
@@ -1,7 +1,7 @@
 <div class="control field-is-horizontal">
     <input class="input text" placeholder="Apple" el="iName">
     <input class="input amount" placeholder="#" el="iAmount">
-    <button class="button is-medium add-btn">
+    <button class="button is-medium add-btn" userid={{items.0.UserId}}>
             <i class="icon fas fa-save"></i>
     </button>
 </div>
