fixed linter issues

--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -1,12 +1,35 @@
 <ul>
     {{#each recipes}}
     <li>
-        Name: {{title}}
-        <img src={{image}}>
-        {{#each steps}}
-        step: {{number}}
-        {{step}}
-        {{/each}}
+        <ul>
+            <li>
+               {{title}} 
+            </li>
+            <li>
+
+            </li> 
+            <img src={{image}}>
+            {{#each steps}}
+                {{>step}}
+            {{/each}}
+        </ul>
     </li>
     {{/each}}
+</ul>
+
+<ul>
+    {{#each recipes}}
+    <li>
+        <div class="card">
+            <div class="card-image">
+                <img src={{image}}>
+            </div>
+            <div class="card-content">
+                <h4>{{title}}</h4>
+            </div>
+            <footer class="card-footer">
+                
+            </footer>
+        </div>
+    </li>
 </ul>
