update handlebars layouts

--- a/public/hb-css/style.css
+++ b/public/hb-css/style.css
@@ -57,3 +57,11 @@ height: 50px;
 .fa-save {
   color: #3d51c2
 }
+.card {
+  width: 312px;
+  margin-bottom: 30px;
+  background-color: #ebfbff;
+}
+.card-footer {
+  background-color: #fde8e3;
+}
