continued small updates

--- a/views/partials/logo.handlebars
+++ b/views/partials/logo.handlebars
@@ -1,7 +1,7 @@
  
 
-<section class="section">
+<div class="section">
     <div class="container">
       <img src="/assets/mediumsmall.png" style = "width: 250px" class = "png">
     </div>
-  </section>
+</div>
