--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,7 @@
 {{>logo}}
+<div class="container">
+    <div class="button is-rounded is-large stock-btn">Stock Your Pantry</div>
+</div>
+<div class="container">
+    <div class="button is-rounded is-large explore-btn">Find Recipes</div>
+</div>
