--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,15 @@
+
 {{>logo}}
+
+<div class="container-main">
 <div class="container stock-ctn">
-    <div class="button is-rounded is-large stock-btn">Stock Your Pantry</div>
+    <button class="button is-rounded is-large stock-btn">
+        <div class="btn-text">Stock Your Pantry</div>
+    </button>
 </div>
 <div class="container explore-ctn">
-    <div class="button is-rounded is-large explore-btn">Find Recipes</div>
+    <button class="button is-rounded is-large explore-btn">
+        <div class="btn-text" >Find Recipes</div>
+    </button>
+</div>
 </div>
