--- a/views/partials/logo.handlebars
+++ b/views/partials/logo.handlebars
@@ -1,7 +1,7 @@
  
 
 <div class="section">
-    <div class="container">
+    <div class="container logo">
       <img src="/assets/mediumsmall.png" style = "width: 250px" class = "png">
     </div>
 </div>
