--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -1,3 +1,6 @@
+<button class="button back-btn">
+    <i class="far fa-arrow-alt-circle-left is-small icon"></i>
+</button>
 {{>logo}}
 <div class="section">
     <div class="columns">
