Fixed overflow isse

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,10 @@
 
 {{>logo}}
-
+<style>
+    html, body{
+        height: 100%;
+    }
+</style>
 <div class="container-main">
 <div class="container stock-ctn">
     <button class="button is-rounded is-large stock-btn">
