--- a/views/partials/logo.handlebars
+++ b/views/partials/logo.handlebars
@@ -2,6 +2,8 @@
 
 <div class="section">
     <div class="container logo">
+      <a href="/members">
       <img src="/assets/mediumsmall.png" style = "width: 250px" class = "png">
+      </a>
     </div>
 </div>
