--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -1,5 +1,5 @@
 <button class="button back-btn">
-    <i class="far fa-arrow-alt-circle-left is-small icon"></i>
+    <i class="far fa-arrow-alt-circle-left is-large icon"></i>
 </button>
 {{>logo}}
 <div class="section">
