--- a/views/partials/items.handlebars
+++ b/views/partials/items.handlebars
@@ -8,7 +8,7 @@
         <button class="button is-medium inc-btn" item={{Ingredients}}>
             <span><i class="icon fas fa-plus-circle"></i></span>
         </button>
-        <button class="button confirm-btn" item={{Ingredients}} itemId={{id}} el="con">
+        <button class="button is-medium confirm-btn" item={{Ingredients}} itemId={{id}} el="con">
             <i class="icon fas fa-save"></i>
         </button>
     </div>
