--- a/views/pantry.handlebars
+++ b/views/pantry.handlebars
@@ -10,7 +10,7 @@
 {{>logo}}
 <div class="section">
     <div class="column clm-main-add">
-        <div class="columns">
+        <div class="columns tbl-layout">
             <div class=" new-item column is-4-desktop is-4-tablet is-4-mobile">
                 <h2 class="add-head is-size-2">Add a New Item</h2>
                 {{>addItem}}
