--- a/views/partials/addItem.handlebars
+++ b/views/partials/addItem.handlebars
@@ -7,7 +7,7 @@
 <div class="control field-is-horizontal">
     <input class="input text i-input" placeholder="Apple" el="iName">
     <input class="input amount" placeholder="#" el="iAmount">
-    <button class="button add-btn" userid={{uId}}>
+    <button class="button is-medium add-btn" userid={{uId}}>
             <i class="icon fas fa-save"></i>
     </button>
 </div>
