--- a/public/hb-css/style.css
+++ b/public/hb-css/style.css
@@ -128,6 +128,24 @@ body {
   min-height: 300px;
   height: 100% !important;
 }
+
+.no-item {
+  font-family: 'Oswald', sans-serif;
+  max-width: 400px;
+  border: 1px solid;
+  border-color: wheat;
+  padding: 10px;
+  box-shadow: 5px 10px 8px #888888;
+  background-color: white;
+  border-radius: 25px;
+  margin: 8px;
+  justify-content: center;
+  padding: 20px;
+  overflow: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .edit-item{
   min-width: 400px;
 }
